--- a/requirements.txt
+++ b/requirements.txt
@@ -1,114 +1,270 @@
 absl-py==1.2.0
+addict==2.4.0
+aiohttp==3.9.5
+aiosignal==1.3.1
+antlr4-python3-runtime==4.9.3
+anyio==4.3.0
+appdirs==1.4.4
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
-asttokens==2.0.8
-attrs==22.1.0
+arrow==1.3.0
+asttokens==2.4.1
+astunparse==1.6.3
+async-lru==2.0.4
+async-timeout==4.0.3
+attrs==23.2.0
+Babel==2.15.0
 backcall==0.2.0
-beautifulsoup4==4.11.1
-bleach==5.0.1
-cachetools==5.2.0
-certifi
-cffi==1.15.1
+beautifulsoup4==4.12.3
+black==24.4.2
+bleach==6.1.0
+Brotli @ file:///tmp/abs_ecyw11_7ze/croots/recipe/brotli-split_1659616059936/work
+cachetools==5.3.3
+certifi @ file:///croot/certifi_1700501669400/work/certifi
+cffi @ file:///tmp/abs_98z5h56wf8/croots/recipe/cffi_1659598650955/work
 charset-normalizer==2.1.1
-colorama 
+clang==5.0
+click==8.1.7
+cmake==3.26.1
+colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
+comm==0.2.2
+contourpy==1.0.7
+cryptography @ file:///croot/cryptography_1694444244250/work
 cycler==0.11.0
-debugpy==1.6.3
+Cython==0.29.34
+dataclasses @ file:///home/conda/feedstock_root/build_artifacts/dataclasses_1628958434797/work
+debugpy==1.6.5
 decorator==5.1.1
 defusedxml==0.7.1
+docker-pycreds==0.4.0
+einops==0.6.0
 entrypoints==0.4
-executing==1.0.0
+et-xmlfile==1.1.0
+exceptiongroup==1.2.1
+executing==2.0.1
 fastjsonschema==2.16.1
+filelock==3.11.0
+flake8==7.0.0
+flake8-bugbear==24.4.26
+flake8-comprehensions==3.14.0
+flatbuffers==1.12
 fonttools==4.37.1
-fvcore==0.1.5.post20210915
+fqdn==1.5.1
+frozenlist==1.4.1
+fsspec==2024.3.1
+ftfy==6.2.0
+future==1.0.0
+fvcore @ file:///home/conda/feedstock_root/build_artifacts/fvcore_1671623667463/work
+gast==0.4.0
+gitdb==4.0.11
+GitPython==3.1.43
 google-auth==2.11.0
 google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+googletrans==4.0.0rc1
 grpcio==1.48.1
+h11==0.14.0
+h2==3.2.0
+h5py==3.1.0
+hpack==3.0.0
+hstspreload==2023.1.1
+httpcore==1.0.5
+httpx==0.27.0
+huggingface-hub==0.23.0
+hyperframe==5.2.0
 idna==3.3
+imageio==2.9.0
+imageio-ffmpeg==0.4.2
 importlib-metadata==4.12.0
 importlib-resources==5.9.0
-iopath==0.1.9
-ipykernel==6.15.2
-ipython==8.5.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.2
+iopath @ file:///home/conda/feedstock_root/build_artifacts/iopath_1636568816351/work
+ipykernel==6.29.4
+ipython==8.12.3
+ipywidgets==8.1.2
+isoduration==20.11.0
 jedi==0.18.1
 Jinja2==3.1.2
-jsonschema==4.15.0
-jupyter-core==4.11.1
-jupyter_client==7.3.5
+joblib==1.2.0
+json5==0.9.25
+jsonpointer==2.4
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+jupyter-client==8.6.1
+jupyter-core==5.7.2
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter-server==2.14.0
+jupyter-server-terminals==0.5.3
+jupyterlab==4.1.8
 jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.3
+jupyterlab-server==2.27.1
+jupyterlab-widgets==3.0.10
+keras==2.7.0
+Keras-Preprocessing==1.1.2
 kiwisolver==1.4.4
-lxml==4.9.1
-Markdown==3.4.1
-MarkupSafe==2.1.1
+lazy-loader==0.2
+libclang==16.0.0
+libcst==1.1.0
+lightning-utilities==0.11.2
+lit==16.0.0
+lxml==5.2.1
+Markdown==3.6
+MarkupSafe==2.1.5
 matplotlib==3.5.3
 matplotlib-inline==0.1.6
+mccabe==0.7.0
 MinkowskiEngine==0.5.4
 mistune==2.0.4
+mkl-fft==1.3.1
+mkl-random @ file:///tmp/build/80754af9/mkl_random_1626186064646/work
+mkl-service==2.4.0
 monai==0.9.1
+moreorless==0.4.0
+mpmath==1.3.0
+multidict==6.0.5
+mypy-extensions==1.0.0
 nbclient==0.6.7
 nbconvert==7.0.0
 nbformat==5.4.0
 nest-asyncio==1.5.5
+networkx==3.1
 ninja==1.10.2.3
-notebook==6.4.12
-numpy==1.23.2
-oauthlib==3.2.0
-olefile
-open3d==0.10.0.0
+notebook==7.1.3
+notebook-shim==0.2.4
+numpy @ file:///tmp/abs_653_j00fmm/croots/recipe/numpy_and_numpy_base_1659432701727/work
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
+oauthlib==3.2.2
+olefile==0.47
+omegaconf==2.3.0
+open-clip-torch==2.0.2
+open3d==0.12.0
 opencv-python==4.6.0.66
-packaging==21.3
-pandocfilters==1.5.0
-parso==0.8.3
-pexpect==4.8.0
+openpyxl==3.1.2
+opt-einsum==3.3.0
+overrides==7.7.0
+packaging==24.0
+pandas==2.0.3
+pandocfilters==1.5.1
+parso==0.8.4
+pathspec==0.12.1
+pathtools==0.1.2
+pexpect==4.9.0
 pickleshare==0.7.5
-Pillow==9.2.0
-pkgutil_resolve_name==1.3.10
-portalocker
-prometheus-client==0.14.1
+pillow @ file:///croot/pillow_1714398848491/work
+pkgutil-resolve-name==1.3.10
+platformdirs==4.2.1
+plyfile==1.0.3
+portalocker @ file:///home/conda/feedstock_root/build_artifacts/portalocker_1695662050140/work
+pretty-errors==1.2.25
+prometheus-client==0.20.0
 prompt-toolkit==3.0.31
-protobuf==3.19.4
+protobuf==3.19.6
 psutil==5.9.2
+ptflops==0.7.3
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycparser==2.21
+pycocotools==2.0.0
+pycodestyle==2.11.1
+pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
+pyDeprecate==0.3.1
+pyflakes==3.2.0
 Pygments==2.13.0
+pyOpenSSL @ file:///croot/pyopenssl_1690223430423/work
 pyparsing==3.0.9
+pypng==0.20220715.0
 pyrsistent==0.18.1
-python-dateutil==2.8.2
-pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@9585a58d10cb2efcd159b058fa4af914203c1d0d
-PyYAML 
-pyzmq==23.2.1
-requests==2.28.1
-requests-oauthlib==1.3.1
+PySocks @ file:///tmp/build/80754af9/pysocks_1605305779399/work
+python-dateutil==2.9.0.post0
+python-json-logger==2.0.7
+pytorch-lightning==1.5.9
+pytorch3d==0.7.5
+pytz==2024.1
+PyWavelets==1.4.1
+PyYAML==6.0.1
+pyzmq==24.0.0
+referencing==0.35.1
+regex==2024.4.28
+repoze.lru==0.7
+requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1684774241324/work
+requests-oauthlib==2.0.0
+rfc3339-validator==0.1.4
+rfc3986==1.5.0
+rfc3986-validator==0.1.1
+Routes==2.5.1
+rpds-py==0.18.1
 rsa==4.9
+scikit-image==0.20.0
+scikit-learn==1.2.2
 scipy==1.9.1
-Send2Trash==1.8.0
-six==1.16.0
-soupsieve==2.3.2.post1
-stack-data==0.5.0
-tabulate 
+seaborn==0.13.2
+Send2Trash==1.8.3
+sentry-sdk==2.1.1
+setproctitle==1.3.3
+six @ file:///tmp/build/80754af9/six_1644875935023/work
+sklearn==0.0.post12
+smmap==5.0.1
+sniffio==1.3.0
+soupsieve==2.5
+stack-data==0.6.3
+stdlibs==2024.1.28
+sympy==1.11.1
+tabulate @ file:///home/conda/feedstock_root/build_artifacts/tabulate_1665138452165/work
+teaserpp-python @ file:///home/ycb/TEASER-plusplus/build/python
 tensorboard==2.10.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-termcolor 
-terminado==0.15.0
-timm==0.3.2
+tensorflow-estimator==2.7.0
+tensorflow-gpu==2.7.0
+tensorflow-io-gcs-filesystem==0.32.0
+termcolor @ file:///home/conda/feedstock_root/build_artifacts/termcolor_1704357939450/work
+terminado==0.18.1
+threadpoolctl==3.1.0
+tifffile==2023.3.21
+timm==0.6.7
 tinycss2==1.1.1
-torch==1.7.1+cu110
-torchaudio==0.7.2
-torchvision==0.8.2+cu110
+tokenizers==0.13.3
+toml==0.10.2
+tomli==2.0.1
+torch==1.12.1
+torch-geometric==2.3.0
+torchaudio @ https://download.pytorch.org/whl/cu113/torchaudio-0.12.1%2Bcu113-cp38-cp38-linux_x86_64.whl
+torchinfo==1.8.0
+torchmetrics==1.4.0
+torchprofile==0.0.4
+torchsummary==1.5.1
+torchvision==0.13.1
 tornado==6.2
-tqdm 
-traitlets==5.3.0
-typing_extensions==4.3.0
-urllib3==1.26.12
-wcwidth==0.2.5
+tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1714854870413/work
+trailrunner==1.4.0
+traitlets==5.14.3
+transformers==4.29.2
+types-python-dateutil==2.9.0.20240316
+typing-extensions @ file:///croot/typing_extensions_1690297465030/work
+typing-inspect==0.9.0
+tzdata==2024.1
+uri-template==1.3.0
+urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1708239446578/work
+usort==1.0.8.post1
+wandb==0.17.1
+wcwidth==0.2.13
+webcolors==1.13
 webencodings==0.5.1
-Werkzeug==2.2.2
-widgetsnbextension==4.0.3
-yacs
-zipp==3.8.1
+websocket-client==1.8.0
+werkzeug==3.0.3
+widgetsnbextension==4.0.10
+wrapt==1.12.1
+yacs @ file:///home/conda/feedstock_root/build_artifacts/yacs_1645705974477/work
+yarl==1.9.4
+zipp==3.18.1
